# successor-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
assets/: autocomplete.txt  showcase.txt  thinking.txt  tool_card.txt
assets/nusamurai/pos-th30/: LeftPowerSlash-ascii-art.txt  Meditating-ascii-art.txt  RightProfileClose-ascii-art.txt  RightSlash-ascii-art.txt  RightSlashOverhead-ascii-art.txt  StraightFrontHeadChest-ascii-art.txt  Torii-ascii-art.txt  Unsheath-ascii-art.txt  Weaponrack-ascii-art.txt
docs/: autonomy-plan.md  changelog.md  chat-agent-loop-refactor-plan.md  chat-display-runtime-refactor-plan.md  chat-render-refactor-plan.md  chat-runtime-refactor-plan.md  compaction.md  concepts.md  file-tools.md  llamacpp-protocol.md  rendering-plan.md  rendering-superpowers.md  subagents-plan.md  web-tools.md
docs/example-themes/: forge.json
examples/: demo_ronin.py
reviewer-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
reviewer-app/src/: App.tsx  index.css  main.tsx  types.ts  usePretextClamp.ts
scripts/: e2e_chat_driver.py  sandbox_runner.py  sandbox_scenarios.py  supervise_successor_studio.py  swap_to_a3b.sh  swap_to_qwopus.sh  walkthrough_demo.py
src/ronin/: __init__.py  __main__.py  cli.py  config.py  loader.py  recorder.py  snapshot.py
src/ronin/builtin/: __init__.py
src/ronin/demos/: __init__.py  braille.py  chat.py
src/ronin/input/: __init__.py  keys.py
src/ronin/profiles/: __init__.py  profile.py
src/ronin/providers/: __init__.py  base.py  factory.py  llama.py  openai_compat.py
src/ronin/render/: __init__.py  app.py  braille.py  cells.py  diff.py  measure.py  paint.py  terminal.py  text.py  theme.py
src/ronin/skills/: __init__.py  skill.py
src/ronin/tools/: __init__.py  tool.py
src/ronin/wizard/: __init__.py  config.py  prompt_editor.py  setup.py
src/successor/: __init__.py  __main__.py  chat.py  chat_agent_loop.py  chat_display_runtime.py  chat_tool_runtime.py  cli.py  config.py  context_usage.py  file_tools.py  graphemes.py  loader.py  playback.py  process_guardrails.py  progress.py  recorder.py  reviewer.py  runbook.py  session_trace.py  snapshot.py  streaming_tool_preview.py  task_adoption.py  tasks.py  tool_runner.py  tools_registry.py  verification_adoption.py  verification_contract.py  verification_hints.py
src/successor/agent/: __init__.py  bash_stream.py  budget.py  compact.py  events.py  log.py  loop.py  microcompact.py  tokens.py
src/successor/bash/: __init__.py  cards.py  change_capture.py  diff_artifact.py  exec.py  parser.py  prepared_output.py  render.py  risk.py  runner.py  verbclass.py
src/successor/builtin/: __init__.py
src/successor/demos/: __init__.py  braille.py  chat.py
src/successor/input/: __init__.py  keys.py
src/successor/intros/: __init__.py  successor.py
src/successor/oauth/: __init__.py  storage.py  worker.py
src/successor/profiles/: __init__.py  profile.py
src/successor/providers/: __init__.py  anthropic.py  base.py  factory.py  llama.py  openai_compat.py  presets.py
src/successor/render/: __init__.py  app.py  braille.py  chat_frame.py  chat_header.py  chat_input.py  chat_intro.py  chat_overlays.py  chat_rows.py  chat_viewport.py  diff.py  intro_art.py  markdown.py  measure.py  paint.py  terminal.py  text.py  theme.py
src/successor/skills/: __init__.py  prompt.py  skill.py
src/successor/subagents/: __init__.py  cards.py  config.py  manager.py  prompt.py  render.py
src/successor/tools/: __init__.py  tool.py
src/successor/web/: __init__.py  browser.py  browser_helper.py  config.py  holonet.py  verification.py  vision.py
src/successor/wizard/: __init__.py  config.py  (+2 more)
tests/: conftest.py  test_agent_budget.py  test_agent_compact.py  test_agent_log.py  test_agent_loop.py  test_agent_microcompact.py  test_agent_tokens.py  test_anthropic_provider.py  test_bash_diff_capture.py  test_bash_exec.py  test_bash_parser.py  test_bash_prepared_output.py  test_bash_render.py  test_bash_runner.py  test_bash_stream.py  test_bash_verbclass.py  test_browser_tool.py  test_chat_autocompact_gate.py  test_chat_bash.py  test_chat_compaction_e2e.py  test_chat_compaction_scaling.py  test_chat_mouse.py  test_chat_paste.py  test_chat_perf.py  test_chat_perf_diagnostics.py  test_chat_profiles.py  test_chat_render_layout.py  test_chat_render_viewport.py  test_chat_reserved_ports.py  test_chat_runbook.py  test_chat_stream_error.py  test_chat_subagents.py  test_chat_tasks.py  test_chat_verification.py  test_chat_web_tools.py  test_cli_chat.py  test_cli_doctor.py  test_compaction_animation.py  test_compaction_assertion.py  test_compaction_config.py  (+47 more)
(+49 files in other folders)
