[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "successor"
version = "0.0.1"
description = "Successor Agent — omni-agent harness for locally-run mid-grade models"
requires-python = ">=3.11"
authors = [{ name = "lycaon" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
# `successor` is the canonical command — typing the brand reinforces it
# in shell history, screencasts, and muscle memory. `sx` is a 2-letter
# alias for daily ergonomics (matches the kubectl/k or git/g pattern
# of long-form + short alias).
successor = "successor.cli:main"
sx = "successor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"successor.builtin" = [
  "themes/*.json",
  "profiles/*.json",
  "skills/*.md",
  "intros/*/*.txt",
]
